--- a/code/1-pulling-reddit-data.ipynb
+++ b/code/1-pulling-reddit-data.ipynb
@@ -28,56 +28,105 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33dd9e6c-d15a-4e41-bd38-5068104dd6a7",
+   "id": "8d064341-e5a1-43ef-864f-a0d843144722",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your client ID\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your client secret ID\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your user agent ID\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your User Name\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your password\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ········\n"
+     ]
+    }
+   ],
    "source": [
-    "#### For final data will need to replace this with getpass"
+    "print('Enter your client ID')\n",
+    "client_id = getpass.getpass() #alphanumeric string provided under \"personal use script\"\n",
+    "\n",
+    "print('Enter your client secret ID')\n",
+    "client_secret = getpass.getpass() #alphanumeric string provided as \"secret\"\n",
+    "\n",
+    "print('Enter your user agent ID')\n",
+    "user_agent = getpass.getpass() #the name of your application\n",
+    "\n",
+    "print('Enter your User Name')\n",
+    "username = getpass.getpass()  #your reddit username\n",
+    "    # Our Reddit User Name - our login to reddit\n",
+    "\n",
+    "print('Enter your password')\n",
+    "password = getpass.getpass()  #your reddit password\n",
+    "    # Our reddit password to login\n",
+    "\n",
+    "# These all should be strings\n",
+    "# If entering into getpass, need to put quotes around it"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9eb73693-4a5c-4a15-b047-d4b188bdf13e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_id = 'X2OHRB9GvCX4QUncessnRw'\n",
-    "client_secret = 'U03hTXiX7Fd0KSV1Ae9El_l789cI1A'\n",
-    "user_agent = 'DK_GA_Proj_3'\n",
-    "username = 'DKaneGeneralAssembly'\n",
-    "password = 'GAProject3'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8d064341-e5a1-43ef-864f-a0d843144722",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# client_id = getpass.getpass() #alphanumeric string provided under \"personal use script\"\n",
-    "#     #X2OHRB9GvCX4QUncessnRw\n",
-    "\n",
-    "# client_secret = getpass.getpass() #alphanumeric string provided as \"secret\"\n",
-    "#     #U03hTXiX7Fd0KSV1Ae9El_l789cI1A\n",
-    "\n",
-    "# user_agent = getpass.getpass() #the name of your application\n",
-    "#     # Under Name\n",
-    "\n",
-    "# username = getpass.getpass()  #your reddit username\n",
-    "#     # Our Reddit User Name - our login to reddit\n",
-    "\n",
-    "# password = getpass.getpass()  #your reddit password\n",
-    "#     # Our reddit password to login\n",
-    "\n",
-    "# # These all should be strings\n",
-    "# # If entering into getpass, need to put quotes around it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "af49e7e1-792a-49c9-805d-c8410a045908",
    "metadata": {},
    "outputs": [],
@@ -93,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ecfd652a-aa7e-4d1d-aae5-bd8571a19e0b",
    "metadata": {},
    "outputs": [
@@ -101,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [200]>\n"
+      "<Response [401]>\n"
      ]
     }
    ],
